@@ -112,6 +112,7 @@ public class BasicUtilities implements Function, Loadable, Predicate
         temp.put("&setField", this);
         temp.put("&typeOf", this);
         temp.put("&newInstance", this);
+        temp.put("&scalar", this);
 
         temp.put("&exit", this);
      
@@ -828,6 +829,10 @@ public class BasicUtilities implements Function, Loadable, Predicate
                 throw new IllegalArgumentException(vars[x] + " must already exist in a scope prior to watching");
              }
           }
+       }
+       else if (n.equals("&scalar"))
+       {
+          return ObjectUtilities.BuildScalar(true, BridgeUtilities.getObject(l));
        }
        else if (n.equals("&newInstance"))
        {
