@@ -1,0 +1,5 @@
+A: read 1
+A: read 2
+A: read 3
+A: detected EOF!!!
+Done, received: done!
