@@ -1,0 +1,4 @@
+3
+6.4567
+[B@554d32 and class [B
+this is a test and class java.lang.String
